# fer-ooup

./: .gitignore  CMakeLists.txt  README.md
lab1/: 1.c  2-diagram.mdj  2.c  2.cpp  3.cpp  4-c++filt.s  4.cpp  4.s  5.cpp  6-c++filt.s  6.cpp  6.s  6_playground.py
lab2/ex0/: oop.cpp  procedural.cpp
lab2/ex1/: mymax.c
lab2/ex2/: mymax.cpp
lab2/ex3/: mymax.py
lab2/ex4/: demo.py
lab2/ex5/: demo.py  log.txt
lab2/ex6/: demo.py  sheet.py
lab3/ex1/: main.c  myfactory.c  parrot.c  tiger.c
lab3/ex1-1/: myfactory.c  myfactory.h  parrot.c  run.sh  tiger.c
lab3/ex1-2/: main.py  myfactory.py
lab3/ex1-2/plugins/: parrot.py  tiger.py
lab3/ex1-3/: animal.h  main.cpp  myfactory.cpp  myfactory.h  parrot.cpp  tiger.cpp
lab3/ex1-4/src/hr/fer/zemris/ooup/lab2/model/: Animal.java  AnimalFactory.java  Demo.java
lab3/ex1-4/src/hr/fer/zemris/ooup/lab2/model/plugins/: Parrot.java  Tiger.java
lab3/ex2/: UndoManager.py  clipboard.py  demo.py  iterator.py  location.py  output_test.txt  plugin.py  test.txt  text_editor.py  text_editor_model.py
lab3/ex2/actions/: edit_action.py
lab3/ex2/playground/: playground.py  snake.py
lab3/ex2/plugins/: capital_letter.py  statistics.py
lab3/ex3/: maarray.h  ref_vs_pointer.cpp  smart_pointers.cpp  smart_pointers_2.cpp
lab3/ex4/: expression_parser.py
lab4/: demo.py  flat_colors.py  gui.py  painter_canvas.py  point.py  renderer.py  saved.txt  stack.py  svg_renderer_impl.py
lab4/geometry/: abstract_graphical_object.py  composite_shape.py  geometry_util.py  graphical_object.py  graphical_object_listener.py  line_segment.py  oval.py
lab4/model/: document_model.py
lab4/states/: add_shape_state.py  eraser_state.py  idle_state.py  select_shape_state.py  state.py
